--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -13,16 +13,16 @@ tasks:
         protoc \
           -I. \
           -I$GOPATH/pkg/mod/github.com/grpc-ecosystem/grpc-gateway@v1.16.0/third_party/googleapis \
-          --go_out=. \
+          --go_out=./protogen/ \
           --go_opt=paths=source_relative \
-          --go-grpc_out=. \
+          --go-grpc_out=./protogen/ \
           --go-grpc_opt=paths=source_relative \
           $FILES
 
   clean-gen-proto:
     desc: Delete generate files
     cmds:
-      - find api/proto -type f ! -name "*proto" -delete
+      - find protogen -type f ! -name "*proto" -delete
 
   gen-certs:
     desc: Generate self-signed certs
