--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -6,7 +6,7 @@ tasks:
     desc: run server
     cmds:
       # go install github.com/bokwoon95/wgo@latest раннер wgo
-      - wgo run cmd/server/main.go -d="postgres://postgres:postgres@localhost:25432/gophkeeper?sslmode=disable"
+      - wgo run cmd/server/main.go -f config.yaml
     silent: true
 
   protoc:
