--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,9 @@ GRPC_GATEWAY_ADDRESS: ":8082"
 
 DATABASE_DSN: "postgresql://gophkeeper_user:gophkeeper_pass@localhost:25432/gophkeeper_db?sslmode=disable"
 
+JWT:
+  JWT_SECRET: "secretkey"
+
 MINIO:
   MINIO_ID: "minioadmin"
   MINIO_SECRET: "minioadmin"
