--- a/config.yaml
+++ b/config.yaml
@@ -8,11 +8,11 @@ DATABASE_DSN: "postgresql://gophkeeper_user:gophkeeper_pass@localhost:25432/goph
 JWT:
   JWT_SECRET: "secretkey"
 
-MINIO:
-  MINIO_ID: "minioadmin"
-  MINIO_SECRET: "minioadmin"
-  MINIO_BUCKET: "gophkeeper"
-  MINIO_ADDRESS: "localhost:9000"
+S3:
+  S3_ACCESS_KEY: "minioadmin"
+  S3_SECRET_KEY: "minioadmin"
+  S3_BUCKET: "gophkeeper"
+  S3_ENDPOINT: "localhost:9000"
 
 TLS:
   TLS_ENABLE_HTTPS: true
