--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -23,7 +23,7 @@ jobs:
 
     name: Test coverage
     runs-on: ubuntu-latest
-    container: golang:1.23
+    container: golang:1.24.2
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -31,8 +31,7 @@ jobs:
       - name: Run go tests
         run: |
           go test ./... -coverprofile=./cover.tmp.out -covermode=atomic -coverpkg=./...
-          grep -vE "/(mocks|main|noexit|multichecker|shortugo.pb.go|shortugo_grpc.pb.go)" cover.tmp.out > cover.out
-
+          grep -vE "/(mocks|main|google|protogen|client)" cover.tmp.out > cover.out
       - name: Show coverage summary 
         run: go tool cover -func=cover.out
 
