--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,4 +1,4 @@
-name: golangci-lint2
+name: golangci-lint
 on:
   push:
     branches:
@@ -17,10 +17,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.23'
+          go-version: '1.24.2'
           cache: false
       - name: Run golangci-lint v2
         uses: golangci/golangci-lint-action@v7
         with:
           version: latest
-          args: --config=.golangci2.yml
+          args: --config=.golangci.yml
