--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -35,7 +35,7 @@ jobs:
         run: go mod verify
 
       - name: Build
-        run: go build -buildvcs=false -v ./...
+        run: go build ./cmd/server -buildvcs=false -v ./...
 
       - name: Run go vet
         run: go vet ./...
