--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -33,7 +33,7 @@ jobs:
           --health-retries 5
         ports:
           - 9000:9000
-        command: "server /data"
+        args: ["server", "/data"]
 
     name: Test coverage
     runs-on: ubuntu-latest
