--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -38,7 +38,7 @@ tasks:
     cmds:
       - |
         if [ ! -f certs/server.crt ] || ! openssl x509 -checkend 86400 -noout -in certs/server.crt; then
-          mkcert -cert-file certs/server.crt -key-file certs/server.key localhost 127.0.0.1 ::1
+          mkcert -cert-file certs/server.crt -key-file certs/server.key localhost 192.168.1.129 192.168.1.175 127.0.0.1 ::1
         else
           echo "Certificate is still valid."
         fi
@@ -69,10 +69,10 @@ tasks:
     cmds:
       - |
         go build -ldflags "\
-        -X 'gophkeeper/pkg/version.Version=1.0.0' \
-        -X 'gophkeeper/pkg/version.Commit=$(git rev-parse --short HEAD)' \
-        -X 'gophkeeper/pkg/version.BuildTime=$(date -u +%Y-%m-%dT%H:%M:%SZ)'" \
-        -o bin/gophkeeper/cmd/server cmd/server/main.go
+        -X 'github.com/apetsko/gophkeeper/pkg/version.Version=1.0.0' \
+        -X 'github.com/apetsko/gophkeeper/pkg/version.CommitHash=$(git rev-parse --short HEAD)' \
+        -X 'github.com/apetsko/gophkeeper/pkg/version.BuildTime=$(date -u +%Y-%m-%dT%H:%M:%SZ)'" \
+        -o ./bin/server
       - echo "Doner"
     silent: true
 
