--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -33,10 +33,11 @@ jobs:
           --health-interval 5s
           --health-timeout 5s
           --health-retries 5
+          --entrypoint ""
         env:
           MINIO_ROOT_USER: minioadmin
           MINIO_ROOT_PASSWORD: minioadmin
-        args: server /data
+
 
 
     name: Test coverage
