--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -35,10 +35,10 @@ jobs:
           --health-interval 5s
           --health-timeout 5s
           --health-retries 5
+          --entrypoint ""
         env:
           MINIO_ROOT_USER: minioadmin
           MINIO_ROOT_PASSWORD: minioadmin
-        args: server /data
 
     steps:
       - uses: actions/checkout@v4
