--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -35,7 +35,7 @@ jobs:
           --health-interval 5s
           --health-timeout 5s
           --health-retries 5
-          --entrypoint "server /data"
+          --entrypoint minio
         env:
           MINIO_ROOT_USER: minioadmin
           MINIO_ROOT_PASSWORD: minioadmin
