--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -29,11 +29,10 @@ jobs:
         ports:
           - 9000:9000
         options: >-
-          --health-cmd "curl -f http://minio:9000/minio/health/ready || exit 1"
+          --health-cmd "curl -f minio://minio:9000/minio/health/ready || exit 1"
           --health-interval 5s
           --health-timeout 5s
           --health-retries 5
-          --entrypoint minio
         env:
           MINIO_ROOT_USER: minioadmin
           MINIO_ROOT_PASSWORD: minioadmin
