--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -30,17 +30,16 @@ jobs:
         image: minio/minio
         ports:
           - 9000:9000
-          - 9001:9001  # веб-интерфейс
+          - 9001:9001
         env:
           MINIO_ROOT_USER: minioadmin
           MINIO_ROOT_PASSWORD: minioadmin
         options: >-
           --health-cmd "curl -f http://localhost:9000/minio/health/ready || exit 1"
           --health-interval 5s
-          --health-timeout 10s
+          --health-timeout 5s
           --health-retries 5
-        entrypoint: /bin/sh
-        args: -c "minio server /data --console-address :9001"
+          --entrypoint sh -c "minio server /data --console-address ':9001'"
 
     steps:
       - uses: actions/checkout@v4
