--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -24,28 +24,22 @@ jobs:
           - 25432:5432
 
 
-      minio:
-        image: minio/minio
-        ports:
-          - 9000:9000
-          - 9001:9001
-        env:
-          MINIO_ROOT_USER: minioadmin
-          MINIO_ROOT_PASSWORD: minioadmin
-        options: >-
-          --health-cmd "curl -f http://localhost:9000/minio/health/ready || exit 1"
-          --health-interval 5s
-          --health-timeout 5s
-          --health-retries 5
-          --entrypoint sh -c "minio server /data --console-address ':9001'"
-
-
     name: Test coverage
     runs-on: ubuntu-latest
     container: golang:1.24.2
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Minio Deploy
+        uses: mamal72/minio-perfect-deploy-action@main
+        with:
+          endpoint: localhost:9000
+          access_key: minioadmin
+          secret_key: minioadmin
+          bucket: 'gophkeeper'
+          source_dir: 'public'
+          target_dir: '/'
 
       - name: Run go tests
         run: |
