--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -37,6 +37,10 @@ jobs:
     runs-on: ubuntu-latest
     container: golang:1.24.2
     steps:
+      - name: Dump MinIO logs on failure
+        if: failure()
+        run: docker logs minio || true
+
       - name: Checkout code
         uses: actions/checkout@v4
 
