--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -37,7 +37,7 @@ jobs:
 
     steps:
       - name: Dump MinIO logs on failure
-      - if: failure()
+        if: failure()
         run: docker logs minio || true
 
       - name: Checkout code
