--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -22,14 +22,12 @@ jobs:
           --health-retries 5
 
       minio:
-        image: lazybit/minio
+        image: minio/minio:latest-cicd
         ports:
           - 9000:9000
         env:
-          MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
-          MINIO_SECRET_KEY: ${{ secrets.MINIO_SECRET_KEY }}
-        volumes:
-          - ${{ github.workspace }}/data:/data
+          MINIO_ROOT_USER: ${{ secrets.MINIO_ACCESS_KEY }}
+          MINIO_ROOT_PASSWORD: ${{ secrets.MINIO_SECRET_KEY }}
         options: --name=minio --health-cmd "curl http://localhost:9000/minio/health/live"
 
 
