--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -25,14 +25,13 @@ jobs:
           --health-retries 5
 
       minio:
-        image: minio/minio
+        image: minio/minio:latest-cicd
         ports:
           - 9000:9000
         env:
           MINIO_ROOT_USER: ${{ secrets.MINIO_ACCESS_KEY }}
           MINIO_ROOT_PASSWORD: ${{ secrets.MINIO_SECRET_KEY }}
         options: --name=minio --health-cmd "curl http://localhost:9000/minio/health/live"
-
 
     steps:
       - name: Dump MinIO logs on failure
