--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -110,8 +110,8 @@ tasks:
     desc: build and run everything in docker
     dir: deployment
     cmds:
-      - mkdir frontend/certs -p
-      - mkcert -cert-file frontend/certs/server.crt -key-file frontend/certs/server.key localhost 127.0.0.1 ::1
+      - mkdir certs
+      - mkcert -cert-file certs/server.crt -key-file certs/server.key localhost 127.0.0.1 ::1
       - docker compose up --build
 
 
