--- a/deployment/backend/Dockerfile.backend
+++ b/deployment/backend/Dockerfile.backend
@@ -20,7 +20,7 @@ WORKDIR /app
 COPY --from=builder /app/server .
 
 # Копируем config и certs, если они в корне проекта (скорректируйте пути при необходимости)
-COPY config.yaml .
-COPY --from=builder /app/certs ./certs
+COPY --from=builder /app/deployment/backend/config.yaml .
+COPY --from=builder /app/deployment/certs ./certs
 
 CMD ["./server", "-f", "config.yaml"]
