--- a/deployment/frontend/Dockerfile.frontend
+++ b/deployment/frontend/Dockerfile.frontend
@@ -4,7 +4,7 @@ WORKDIR /app
 
 RUN git clone https://github.com/apetsko/gophkeeper-frontend.git . \
     && npm install \
-    && npm run build
+    && npm run dev:docker
 
 FROM nginx:alpine
 
@@ -15,8 +15,7 @@ RUN mkdir -p /etc/nginx/ssl
 COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Копируем сертификаты
-COPY certs/server.crt /etc/nginx/ssl/server.crt
-COPY certs/server.key /etc/nginx/ssl/server.key
+COPY --from=builder /app/deployment/certs ./certs
 
 # Копируем кастомный конфиг nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
