--- a/deployment/frontend/Dockerfile.frontend
+++ b/deployment/frontend/Dockerfile.frontend
@@ -15,7 +15,8 @@ RUN mkdir -p /etc/nginx/ssl
 COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Копируем сертификаты
-COPY --from=builder /app/deployment/certs ./certs
+COPY certs/server.crt /etc/nginx/ssl/server.crt
+COPY certs/server.key /etc/nginx/ssl/server.key
 
 # Копируем кастомный конфиг nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
