--- a/deployment/frontend/Dockerfile.frontend
+++ b/deployment/frontend/Dockerfile.frontend
@@ -15,8 +15,10 @@ RUN mkdir -p /etc/nginx/ssl
 COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Копируем сертификаты
-COPY certs/server.crt /etc/nginx/ssl/server.crt
-COPY certs/server.key /etc/nginx/ssl/server.key
+COPY ./certs/server.crt /etc/nginx/ssl/server.crt
+COPY ./certs/server.key /etc/nginx/ssl/server.key
 
 # Копируем кастомный конфиг nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+
