--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -112,7 +112,8 @@ tasks:
     cmds:
       - mkdir certs -p
       - mkcert -cert-file certs/server.crt -key-file certs/server.key localhost 127.0.0.1 ::1
-      - docker compose up --build
+      - docker compose build --no-cache
+      - docker compose up
 
 
 
