--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -1,5 +1,7 @@
 services:
   frontend:
+    depends_on:
+      - backend
     build:
       context: ./frontend
       dockerfile: Dockerfile.frontend
@@ -13,13 +15,13 @@ services:
 
   backend:
     depends_on:
-      - gophkeeper_postgres_build
       - gophkeeper_minio_build
+      - gophkeeper_postgres_build
     build:
       context: ./backend
       dockerfile: Dockerfile.backend
-#    ports:
-#      - "8080:8080"
+    ports:
+      - "8082:8082"
     container_name: gophkeeper_backend
     networks:
       - gophkeeper_net
@@ -29,16 +31,16 @@ services:
   gophkeeper_minio_build:
     image: minio/minio:latest
     container_name: gophkeeper_minio
-#    ports:
-#      - "9000:9000"
-#      - "9001:9001"
+    ports:
+      - "9000:9000"
+      - "9001:9001"
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
     command: server /data --console-address ":9001"
     volumes:
-      - ../gophstorage_docker/minio/data:/data
-      - ../gophstorage_docker/minio/config:/root/.minio
+      - ../../gophstorage_docker/minio/data:/data
+      - ../../gophstorage_docker/minio/config:/root/.minio
     networks:
       - gophkeeper_net
     healthcheck:
@@ -58,7 +60,7 @@ services:
       POSTGRES_PASSWORD: gophkeeper_pass
       POSTGRES_DB: gophkeeper_db
     volumes:
-      - ../gophstorage/postgres/data:/var/lib/postgresql/data
+      - ../../gophstorage_docker/postgres/data:/var/lib/postgresql/data
     networks:
       - gophkeeper_net
 
