--- a/deployment/backend/config.yaml
+++ b/deployment/backend/config.yaml
@@ -12,7 +12,7 @@ S3:
   S3_ACCESS_KEY: "minioadmin"
   S3_SECRET_KEY: "minioadmin"
   S3_BUCKET: "gophkeeper"
-  S3_ENDPOINT: "gophkeeper_minio:9000"
+  S3_ENDPOINT: "localhost:9000"
 
 TLS:
   TLS_ENABLE_HTTPS: false
