--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -49,19 +49,19 @@ services:
       retries: 5
     restart: unless-stopped
 
-  create-bucket:
-    image: minio/mc:latest
-    environment:
-      MC_HOST_minio: http://${minioadmin}:${minioadmin}@gophkeeper_minio:9000
-    entrypoint:
-      - sh
-      - -c
-      - |
-        until mc ls minio > /dev/null 2>&1; do
-          sleep 0.5
-        done
-
-        mc mb gophkeeper_minio/post-bucket
+#  create-bucket:
+#    image: minio/mc:latest
+#    environment:
+#      MC_HOST_minio: http://${minioadmin}:${minioadmin}@gophkeeper_minio:9000
+#    entrypoint:
+#      - sh
+#      - -c
+#      - |
+#        until mc ls minio > /dev/null 2>&1; do
+#          sleep 0.5
+#        done
+#
+#        mc mb gophkeeper_minio/post-bucket
 
   gophkeeper_postgres_build:
     image: postgres:17
