--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -33,13 +33,20 @@ services:
     image: minio/minio:latest
     ports:
       - "9000:9000"
-      - "9001:9001"
     volumes:
       - ../../gophstorage_docker/minio/data:/data
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
     command: server /data --console-address :9001
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc config host add gophkeeper_minio http://minio:9000 minioadmin minioadmin;
+      /usr/bin/mc rm -r --force gophkeeper_minio/gophkeeper;
+      /usr/bin/mc mb gophkeeper_minio/gophkeeper;
+      /usr/bin/mc policy download gophkeeper_minio/gophkeeper;
+      exit 0;
+      "
     networks:
       - gophkeeper_net
     healthcheck:
@@ -49,19 +56,18 @@ services:
       retries: 5
     restart: unless-stopped
 
-#  create-bucket:
-#    image: minio/mc:latest
-#    environment:
-#      MC_HOST_minio: http://${minioadmin}:${minioadmin}@gophkeeper_minio:9000
-#    entrypoint:
-#      - sh
-#      - -c
-#      - |
-#        until mc ls minio > /dev/null 2>&1; do
-#          sleep 0.5
-#        done
-#
-#        mc mb gophkeeper_minio/post-bucket
+  createbuckets:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc config host add myminio http://minio:9000 AKIAIOSFODNN7EXAMPLE wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY;
+      /usr/bin/mc rm -r --force myminio/somebucketname;
+      /usr/bin/mc mb myminio/somebucketname;
+      /usr/bin/mc policy download myminio/somebucketname;
+      exit 0;
+      "
 
   gophkeeper_postgres_build:
     image: postgres:17
