--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile.backend.local
+      dockerfile: Dockerfile.backend
     ports:
       - "8082:8082"
     container_name: gophkeeper_backend
