--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,7 +1,20 @@
 version: "3"
 
 tasks:
+  run:
+    desc: run all
+    cmds:
+      - go-task -p front run-server
+
+  front:
+    watch: true
+    desc: run local gophkeeper
+    dir: front
+    cmds:
+      - npm run dev -- --port 3000 --host
+
   run-server:
+    watch: true
     desc: run server
     deps:
       - gen-certs
