--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -17,6 +17,7 @@ tasks:
     watch: true
     desc: run server
     deps:
+      - storage-up
       - gen-certs
     cmds:
       # go install github.com/bokwoon95/wgo@latest раннер wgo
